json and script updates

--- a/instructors.html
+++ b/instructors.html
@@ -88,10 +88,10 @@
 			</div>
 
 			<div id="instructor-template" class="text-center table-cell">
-				<img class="staff-image img-scalable" src="images/staff/2017/akshathjain.jpg" alt="instructor_image"/>
+				<img class="staff-image img-scalable" src=""/>
 
-				<h3>Akshath Jain</h3>
-				<p>Akshath is a rising senior at North Allegheny Senior High School and is one of the most experienced members of the varsity North Allegheny Speech and Debate teams. He is looking forward to teaching at PFI this year!Akshath is a rising senior at North Allegheny Senior High School and is one of the most experienced members of the varsity North Allegheny Speech and Debate teams. He is looking forward to teaching at PFI this year!Akshath is a rising senior at North Allegheny Senior High School and is one of the most experienced members of the varsity North Allegheny Speech and Debate teams. He is looking forward to teaching at PFI this year!</p>
+				<h3></h3>
+				<p></p>
 			</div>
 			
 		</div>
