--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 		<h1 class="text-center">ABOUT US</h1>
 		<div class="row">
 			<div class="col-sm-3">
-				<img class="staff-image clickable" src="images/staff/2017/akshathjain.jpg" onclick="window.location.assign('http://akshathjain.com')">
+				<img class="staff-image clickable" src="images/staff/2017/akshathjain.JPG" onclick="window.location.assign('http://akshathjain.com')">
 				<h3><b><a style="color: #333333;" href="http://akshathjain.com">Akshath Jain</a></b></h3>
 				<p>Organizer / Instructor</p>
 				<p><a href="mailto:akshath@pghforensics.org">akshath@pghforensics.org</a></p>
