added link to instructor section

--- a/index.html
+++ b/index.html
@@ -210,13 +210,13 @@
 	</div>
 
 	<!-- instructors -->
-	<!-- <div class="container-fluid bg-staff bg-staff-text">
+	<div class="container-fluid bg-staff bg-staff-text">
 		<div class="text-center">
 			<h3 class="text-center"><b>Meet our Instructors!</b></h3>
 			<p>They're a crucial part of our program.</p>
 			<a href="instructors.html" type="button" class="btn btn-warning">View Instructors</a>
 		</div>
-	</div> -->
+	</div>
 
 	<!-- contact -->
 	<div class="container-fluid text-center bg-contact bg-contact-text" id="contact">
