updated instructor page and fixed spacing issue
also added card views, enabled external links from images and names, mobile optimizations, and mobile UX improvements

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 	</div>
 
 	<!-- instructors -->
-	<div class="container-fluid bg-staff bg-staff-text">
+	<div class="container-fluid bg-staff bg-staff-text" id="instructors">
 		<div class="text-center">
 			<h3 class="text-center"><b>Meet our Instructors!</b></h3>
 			<p>They're a crucial part of our program.</p>
