--- a/instructors.html
+++ b/instructors.html
@@ -20,13 +20,15 @@
 			table-layout: fixed;
 			width: 100%;
 			margin-bottom: 10px;
+			border-spacing: 25px;
+			border-collapse: separate;
 		}
 		.table-cell{
 			display: table-cell;
 			padding: 10px;
 			margin: 10px;
 		}
-		@media only screen and (max-width: 600px){
+		@media only screen and (max-width: 1100px){
 			.table-cell{
 				display: block;
 			}
@@ -40,25 +42,39 @@
 		}
 
 		.bg-instructors{
-			background-color: #ffffff;
-			padding-right: 50px;
-			padding-left: 50px;
-			padding-top: 120px;
+			background-color: #FAFAFA;
+			padding-right: 2%;
+			padding-left: 2%;
+			padding-top: 100px;
 			padding-bottom: 70px;
 		}
+		@media only screen and (max-width: 1100px){
+			.bg-instructors{
+				padding-top: 70px
+			}
+		}
+
 		.bg-instructors-text h1{
 			font-size: 27px;
 			margin-bottom: 50px;
 		}
 
 		.bg-instructors-text h3{
-
 			font-size: 18px;
 		}
 
 		.bg-instructors-text p{
-
 			font-size: 16px;
+		}
+
+		.bg-instructor-card{
+			background-color: #FFFFFF;
+			padding-top: 40px;
+			padding-bottom: 40px;
+			padding-left: 30px;
+			padding-right: 30px;
+			margin-bottom: 15px;
+			box-shadow: 0px 7px 10px rgba(0,0,0,0.2);
 		}
 	</style>
 
@@ -69,7 +85,7 @@
 	<nav class="navbar navbar-default navbar-fixed-top navbarStateWhenScrolled">
 		<div class="container">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html#curriculum"><span style="font-size: 15px;" class="glyphicon glyphicon-menu-left"></span>&nbsp;&nbsp;&nbsp;BACK</a>
+				<a class="navbar-brand" href="index.html#about"><span style="font-size: 15px;" class="glyphicon glyphicon-menu-left"></span>&nbsp;&nbsp;&nbsp;BACK</a>
 			</div>
 			<div class="collapse navbar-collapse">
 				<div class="nav navbar-nav navbar-right">
@@ -82,12 +98,12 @@
 	<!--begin template engine-->
 	<div class="container-fluid">
 		<div id="instructor-container" class="bg-instructors bg-instructors-text table"> 
-			
+			<!-- all instructor bios and images are inserted dynamically using javascript -->
 			<div class="table-row" id="row-holder">
 
 			</div>
 
-			<div id="instructor-template" class="text-center table-cell">
+			<div id="instructor-template" class="text-center table-cell bg-instructor-card">
 				<img class="staff-image img-scalable" src=""/>
 
 				<h3></h3>
