--- a/instructors.html
+++ b/instructors.html
@@ -14,6 +14,18 @@
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
 	<script src="scripts/instructorScripts.js"></script>
 
+	<!-- google analytics info -->
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-97434519-1', 'auto');
+		ga('send', 'pageview');
+
+	</script>
+
 	<style>
 		.table-row{
 			display: table;
@@ -76,6 +88,15 @@
 			margin-bottom: 15px;
 			box-shadow: 0px 7px 10px rgba(0,0,0,0.2);
 		}
+
+		.navbar-brand:hover{
+			color: #F0AD4E !important;
+		}
+
+		.nav li a:hover{
+			color: #5B5B5B !important;
+		}
+
 	</style>
 
 </head>
