--- a/instructors.html
+++ b/instructors.html
@@ -97,6 +97,23 @@
 			color: #5B5B5B !important;
 		}
 
+		#loader{
+			position: absolute;
+			left: 50%;
+			top: 14%;
+			width: 50px;
+			height: 50px;
+			border: 7px solid #e8e8e8;
+			border-top: 7px solid #F0AD4E;
+			border-radius: 50%;
+			animation: spin 1s linear infinite;
+		}
+
+		@keyframes spin{
+			0% {transform: rotate(0deg);}
+			100% {transform: rotate(360deg);}
+		}
+
 	</style>
 
 </head>
@@ -116,6 +133,9 @@
 		</div>
 	</nav>
 
+	<!-- loader to display while template engine runs -->
+	<div id="loader"></div>
+
 	<!--begin template engine-->
 	<div class="container-fluid">
 		<div id="instructor-container" class="bg-instructors bg-instructors-text table"> 
@@ -124,7 +144,7 @@
 
 			</div>
 
-			<div id="instructor-template" class="text-center table-cell bg-instructor-card">
+			<div id="instructor-template" class="text-center table-cell bg-instructor-card" style="display: none">
 				<img class="staff-image img-scalable" src=""/>
 
 				<h3></h3>
