--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 	<!-- footer -->
 	<footer class="container-fluid bg-footer bg-footer-text">
 
-		<p>©2017 Pittsburgh Forensics Institute. All rights reserved. Designed and developed by Akshath Jain.</p>
+		<p>©2018 Akshath Jain. All rights reserved. Designed and developed by Akshath Jain.</p>
 	</footer>
 </body>
 </html>
