--- a/instructors.html
+++ b/instructors.html
@@ -157,7 +157,7 @@
 
 <footer class="container-fluid bg-footer bg-footer-text">
 	<p>
-		©2017 Pittsburgh Forensics Institute. All rights reserved. Designed and developed by Akshath Jain.
+		©2018 Akshath Jain. All rights reserved. Designed and developed by Akshath Jain.
 	</p>
 </footer>
 
