slight json updates

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link rel="stylesheet" href="styles/styles.css">
 	<script src="scripts/scripts.js"></script>
+	<script src="scripts/importantInfoScripts.js"></script>
 
 	<!-- google analytics info -->
 	<script>
@@ -58,7 +59,7 @@
 		<div class="container-fluid text-center bg-home-text">
 			<h1>Pittsburgh Forensics Institute</h1>
 			<p><b>A high-quality summer camp for the Greater Pittsburgh Speech &amp; Debate Community</b></p>
-			<a class="btn btn-warning" href="https://goo.gl/forms/fGtRRlAaa4dLMaGk2">SIGN UP</a>
+			<a id="signup-button" class="btn btn-warning" href="">SIGN UP</a>
 		</div>
 	</div>
 
