--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 			</div>
 			<div class="col-sm-4">
 				<h3><span class="glyphicon glyphicon-map-marker" style="color: #F0AD4E"></span>&nbsp;&nbsp;&nbsp;<b>Where?</b></h3>
-				<p id="where-description">All lessons will be held at the Cathedral of Learning, Pittsburgh University</p>
-				<a id="where-address" href="#map">4200 Fifth Ave, Pittsburgh, PA 15260</a>
+				<p id="where-description"></p>
+				<a id="where-address" href="#map"></a>
 			</div>
 		</div>
 	</div>	
