--- a/instructors.html
+++ b/instructors.html
@@ -57,7 +57,7 @@
 			background-color: #FAFAFA;
 			padding-right: 2%;
 			padding-left: 2%;
-			padding-top: 100px;
+			padding-top: 10px;
 			padding-bottom: 70px;
 		}
 		@media only screen and (max-width: 1100px){
@@ -114,6 +114,12 @@
 			100% {transform: rotate(360deg);}
 		}
 
+		.dropdown-style{
+			background-color: #FAFAFA;
+			margin-top: 100px; 
+			margin-right: 4%; 
+			margin-left: 3%;
+		}
 	</style>
 
 </head>
@@ -136,8 +142,16 @@
 	<!-- loader to display while template engine runs -->
 	<div id="loader"></div>
 
+	<!-- drop down to select which year -->
+	<div class="dropdown dropdown-style">
+		<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Year <span class="caret"></span></button>
+		<ul class="dropdown-menu" id="year-selections">
+		</ul>
+	</div>
+
 	<!--begin template engine-->
 	<div class="container-fluid">
+
 		<div id="instructor-container" class="bg-instructors bg-instructors-text table"> 
 			<!-- all instructor bios and images are inserted dynamically using javascript -->
 			<div class="table-row" id="row-holder">
@@ -153,6 +167,7 @@
 			
 		</div>
 	</div>
+
 </div>
 
 <footer class="container-fluid bg-footer bg-footer-text">
