finished the backlog view for instructors

--- a/instructors.html
+++ b/instructors.html
@@ -100,7 +100,7 @@
 		#loader{
 			position: absolute;
 			left: 50%;
-			top: 14%;
+			top: 18%;
 			width: 50px;
 			height: 50px;
 			border: 7px solid #e8e8e8;
@@ -123,7 +123,7 @@
 	</style>
 
 </head>
-<body>
+<body style="background-color: #FAFAFA">
 
 	<!-- navbar -->
 	<nav class="navbar navbar-default navbar-fixed-top navbarStateWhenScrolled">
@@ -144,7 +144,7 @@
 
 	<!-- drop down to select which year -->
 	<div class="dropdown dropdown-style">
-		<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Year <span class="caret"></span></button>
+		<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" id="year-display">Year <span class="caret"></span></button>
 		<ul class="dropdown-menu" id="year-selections">
 		</ul>
 	</div>
