updated margins for instructor view

--- a/instructors.html
+++ b/instructors.html
@@ -43,6 +43,7 @@
 		@media only screen and (max-width: 1100px){
 			.table-cell{
 				display: block;
+				margin: 0px;
 			}
 		}
 		.img-scalable{
@@ -62,7 +63,9 @@
 		}
 		@media only screen and (max-width: 1100px){
 			.bg-instructors{
-				padding-top: 70px
+				padding-top: 10px;
+				padding-right: 0%;
+				padding-left: 0%;
 			}
 		}
 
