added cost to important info

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	</script>
 </head>
 
-<body>
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
 
 	<!--nav bar-->
 	<nav class="navbar navbar-default navbar-fixed-top">
@@ -47,7 +47,7 @@
 					<li><a href="#info">General Info</a></li>
 					<li><a href="#faq">FAQ</a></li>
 					<li><a href="#curriculum">Curriculum</a></li>
-					<li><a href="#about">About</a></li>
+					<li><a href="#team">Team</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</div>
 			</div>
@@ -59,7 +59,8 @@
 		<div class="container-fluid text-center bg-home-text">
 			<h1>Pittsburgh Forensics Institute</h1>
 			<p><b>A high-quality summer camp for the Greater Pittsburgh Speech &amp; Debate Community</b></p>
-			<a id="signup-button" class="btn btn-warning" href="">SIGN UP</a>
+			<a id="signup-button" class="btn btn-warning" href=""><b>SIGN UP</b></a>&nbsp;&nbsp;
+			<a class="btn btn-primary" href="#info"><b>MORE INFORMATION</b></a>
 		</div>
 	</div>
 
@@ -177,8 +178,8 @@
 	</div>
 
 	<!-- about us -->
-	<div class="container-fluid text-center bg-about bg-about-text" id="about">
-		<h1 class="text-center">ABOUT US</h1>
+	<div class="container-fluid text-center bg-about bg-about-text" id="team">
+		<h1 class="text-center">TEAM</h1>
 		<div class="row">
 			<div class="col-sm-3">
 				<img class="staff-image clickable" src="images/staff/2017/akshathjain.JPG" onclick="window.location.assign('http://akshathjain.com')">
