updated bios, styles, scripts

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link rel="stylesheet" href="styles/styles.css">
-	<script src="scripts/scripts.js"></script>
+	<script src="scripts/indexScripts.js"></script>
 	<script src="scripts/importantInfoScripts.js"></script>
 
 	<!-- google analytics info -->
@@ -98,7 +98,7 @@
 		<div class="row">
 			<div class="col-sm-4">
 				<h3><b>How much does this program cost?</b></h3>
-				<p>The cost for PFI this year will be $360.</p>
+				<p id="program-cost"></p>
 			</div>
 			<div class="col-sm-4">
 				<h3><b>How do I pay?</b></h3>
