--- a/instructors.html
+++ b/instructors.html
@@ -132,7 +132,7 @@
 	<nav class="navbar navbar-default navbar-fixed-top navbarStateWhenScrolled">
 		<div class="container">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html#about"><span style="font-size: 15px;" class="glyphicon glyphicon-menu-left"></span>&nbsp;&nbsp;&nbsp;BACK</a>
+				<a class="navbar-brand" href="index.html#team"><span style="font-size: 15px;" class="glyphicon glyphicon-menu-left"></span>&nbsp;&nbsp;&nbsp;BACK</a>
 			</div>
 			<div class="collapse navbar-collapse">
 				<div class="nav navbar-nav navbar-right">
