--- a/instructors.html
+++ b/instructors.html
@@ -27,102 +27,102 @@
 	</script>
 
 	<style>
-		.table-row{
-			display: table;
-			table-layout: fixed;
-			width: 100%;
-			margin-bottom: 10px;
-			border-spacing: 25px;
-			border-collapse: separate;
-		}
+	.table-row{
+		display: table;
+		table-layout: fixed;
+		width: 100%;
+		margin-bottom: 10px;
+		border-spacing: 25px;
+		border-collapse: separate;
+	}
+	.table-cell{
+		display: table-cell;
+		padding: 10px;
+		margin: 10px;
+	}
+	@media only screen and (max-width: 1100px){
 		.table-cell{
-			display: table-cell;
-			padding: 10px;
-			margin: 10px;
-		}
-		@media only screen and (max-width: 1100px){
-			.table-cell{
-				display: block;
-				margin: 0px;
-			}
-		}
-		.img-scalable{
-			text-align: center;
-			max-width: 100%;
 			display: block;
-			height: auto;
-			margin: 0 auto;
+			margin: 0px;
 		}
+	}
+	.img-scalable{
+		text-align: center;
+		max-width: 100%;
+		display: block;
+		height: auto;
+		margin: 0 auto;
+	}
 
+	.bg-instructors{
+		background-color: #FAFAFA;
+		padding-right: 2%;
+		padding-left: 2%;
+		padding-top: 10px;
+		padding-bottom: 70px;
+	}
+	@media only screen and (max-width: 1100px){
 		.bg-instructors{
-			background-color: #FAFAFA;
-			padding-right: 2%;
-			padding-left: 2%;
 			padding-top: 10px;
-			padding-bottom: 70px;
+			padding-right: 0%;
+			padding-left: 0%;
 		}
-		@media only screen and (max-width: 1100px){
-			.bg-instructors{
-				padding-top: 10px;
-				padding-right: 0%;
-				padding-left: 0%;
-			}
-		}
+	}
 
-		.bg-instructors-text h1{
-			font-size: 27px;
-			margin-bottom: 50px;
-		}
+	.bg-instructors-text h1{
+		font-size: 27px;
+		margin-bottom: 50px;
+	}
 
-		.bg-instructors-text h3{
-			font-size: 18px;
-		}
+	.bg-instructors-text h3{
+		font-size: 18px;
+	}
 
-		.bg-instructors-text p{
-			font-size: 16px;
-		}
+	.bg-instructors-text p{
+		font-size: 16px;
+	}
 
-		.bg-instructor-card{
-			background-color: #FFFFFF;
-			padding-top: 40px;
-			padding-bottom: 40px;
-			padding-left: 30px;
-			padding-right: 30px;
-			margin-bottom: 15px;
-			box-shadow: 0px 7px 10px rgba(0,0,0,0.2);
-		}
+	.bg-instructor-card{
+		background-color: #FFFFFF;
+		padding-top: 40px;
+		padding-bottom: 40px;
+		padding-left: 30px;
+		padding-right: 30px;
+		margin-bottom: 15px;
+		box-shadow: 0px 7px 10px rgba(0,0,0,0.2);
+	}
 
-		.navbar-brand:hover{
-			color: #F0AD4E !important;
-		}
+	.navbar-brand:hover{
+		color: #F0AD4E !important;
+	}
 
-		.nav li a:hover{
-			color: #5B5B5B !important;
-		}
+	.nav li a:hover{
+		color: #5B5B5B !important;
+	}
 
-		#loader{
-			position: absolute;
-			left: 50%;
-			top: 18%;
-			width: 50px;
-			height: 50px;
-			border: 7px solid #e8e8e8;
-			border-top: 7px solid #F0AD4E;
-			border-radius: 50%;
-			animation: spin 1s linear infinite;
-		}
+	#loader{
+		position: absolute;
+		left: 50%;
+		top: 18%;
+		width: 50px;
+		height: 50px;
+		border: 7px solid #e8e8e8;
+		border-top: 7px solid #F0AD4E;
+		border-radius: 50%;
+		animation: spin 1s linear infinite;
+	}
 
-		@keyframes spin{
-			0% {transform: rotate(0deg);}
-			100% {transform: rotate(360deg);}
-		}
+	@keyframes spin{
+		0% {transform: rotate(0deg);}
+		100% {transform: rotate(360deg);}
+	}
 
-		.dropdown-style{
-			background-color: #FAFAFA;
-			margin-top: 100px; 
-			margin-right: 4%; 
-			margin-left: 3%;
-		}
+	.dropdown-style{
+		background-color: #FAFAFA;
+		margin-top: 100px; 
+		margin-right: 4%; 
+		margin-left: 3%;
+	}
 	</style>
 
 </head>
@@ -146,10 +146,12 @@
 	<div id="loader"></div>
 
 	<!-- drop down to select which year -->
-	<div class="dropdown dropdown-style">
-		<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" id="year-display">Year <span class="caret"></span></button>
-		<ul class="dropdown-menu" id="year-selections">
-		</ul>
+	<div class="dropdown dropdown-style text-center">
+		<div class="btn-group">
+			<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" id="year-display">Year <span class="caret"></span></button>
+			<ul class="dropdown-menu" id="year-selections">
+			</ul>
+		</div>	
 	</div>
 
 	<!--begin template engine-->
