--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 		<!-- drop down to select which year -->
 		<div class="dropdown dropdown-style">
 			<div class="btn-group">
-				
+
 				<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" id="year-display">Year <span class="caret"></span></button>
 				<ul class="dropdown-menu" id="year-selections">
 				</ul>
@@ -193,7 +193,7 @@
 		</div>
 
 		<div id="organizer-holder" class="row">
-			<div class="" id="organizer-template" style="view: none">
+			<div class="" id="organizer-template" style="view: none; opacity: 0.1">
 				<img class="staff-image" src="">
 				<h3><b></b></h3>
 				<p>Organizer / Instructor</p>
