2018 important info and instructor updates

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 			</div>
 			<div class="col-sm-4">
 				<h3><b>When is my payment due by?</b></h3>
-				<p>All checks are due by July 31st (the first day of the program). Payment specifics have already been emailed out. Please <a href="#contact">contact</a> us with any questions.</p>
+				<p id="checkDueDate">All checks are due by July 31st (the first day of the program). </p>
 			</div>
 		</div>
 		<div class="row">
