--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 			</div>
 			<div class="col-sm-4">
 				<h3><b>When is my payment due by?</b></h3>
-				<p id="checkDueDate">All checks are due by July 31st (the first day of the program). </p>
+				<p id="checkDueDate"></p>
 			</div>
 		</div>
 		<div class="row">
