--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
 	</div>
 
 	<!-- general information -->
-	<div class="container-fluid bg-info bg-info-text" id="info">
+	<div class="container-fluid bg-info bg-info-text width-constraint" id="info">
 		<h1 class="text-center">GENERAL INFO</h1>
 		<div class="row">
 			<div class="col-sm-4">
 				<h3><span class="glyphicon glyphicon-paperclip" style="color: #F0AD4E"></span>&nbsp;&nbsp;&nbsp;<b>What?</b></h3>
 				<p>The Pittsburgh Forensics Institute is a low-cost, high-quality summer camp for the Greater Pittsburgh Forensics Community. In a span of two weeks, participants will be able to explore a deep and thorough curriculum for their events modeled after some of the premier camps in the country, with guidance from the most successful members of the North Allegheny Forensics Team.</p>
-			</div>			
+			</div>
 			<div class="col-sm-4">
 				<h3><span class="glyphicon glyphicon-calendar" style="color: #F0AD4E"></span>&nbsp;&nbsp;&nbsp;<b>When?</b></h3>
 				<p id="when-description"></p>
@@ -83,7 +83,7 @@
 				<a id="where-address" href="#map"></a>
 			</div>
 		</div>
-	</div>	
+	</div>
 
 	<!-- map (with google maps)-->
 	<div class="container-fluid bg-map bg-map-text" id="map">
@@ -93,7 +93,7 @@
 	</div>
 
 	<!-- FAQ -->
-	<div class="container-fluid bg-faq bg-faq-text" id="faq">
+	<div class="container-fluid bg-faq bg-faq-text width-constraint" id="faq">
 		<h1 class="text-center">FAQ</h1>
 
 		<div class="row">
@@ -152,44 +152,46 @@
 
 	<!-- curriculum -->
 	<div class="container-fluid bg-curriculum bg-curriculum-text" id="curriculum">
-		<h1 class="text-center">CURRICULUM</h1>
-		<div class="row">
-			<div class="col-sm-6">
-				<h3><b>Lincoln-Douglas Debate (LD)</b></h3>
-				<p>Lincoln Douglas debate is a one-on-one debate that is focused on philosophy and logic.  The debate topics change every two months and are based on what is morally right or wrong. Lincoln Douglas heightens proficiency in speaking, argumentation, and research. Lincoln-Douglas debaters, with their experience in rebuttal delivery and speech writing, soon become well versed in philosophy and become more fluent and confident speakers.</p>
+		<div class="width-constraint">
+			<h1 class="text-center">CURRICULUM</h1>
+			<div class="row">
+				<div class="col-sm-6">
+					<h3><b>Lincoln-Douglas Debate (LD)</b></h3>
+					<p>Lincoln Douglas debate is a one-on-one debate that is focused on philosophy and logic.  The debate topics change every two months and are based on what is morally right or wrong. Lincoln Douglas heightens proficiency in speaking, argumentation, and research. Lincoln-Douglas debaters, with their experience in rebuttal delivery and speech writing, soon become well versed in philosophy and become more fluent and confident speakers.</p>
+				</div>
+				<div class="col-sm-6">
+					<h3><b>Public Forum Debate (PF)​​</b></h3>
+					<p>Public Forum Debate is audience friendly debate. Two pairs (teams) debate monthly controversial topics ripped from newspaper headlines. Rounds begin with a coin toss between the competing teams to determine side and order (Pro-Con or Con-Pro). Public Forum tests skills in argumentation, cross-examination, and refutation.</p>
+				</div>
 			</div>
-			<div class="col-sm-6">
-				<h3><b>Public Forum Debate (PF)​​</b></h3>
-				<p>Public Forum Debate is audience friendly debate. Two pairs (teams) debate monthly controversial topics ripped from newspaper headlines. Rounds begin with a coin toss between the competing teams to determine side and order (Pro-Con or Con-Pro). Public Forum tests skills in argumentation, cross-examination, and refutation.</p>
+			<div class="row">
+				<div class="col-sm-6">
+					<h3><b>Extemporaneous Speaking (Extemp)</b></h3>
+					<p>Extemporaneous Speaking is an event that combines quick-thinking and memorization. Competitors will draw a current events question, and then have 30 minutes to prepare a speech in response. Contestants can use a variety of books, magazines, and articles to craft their speech. After 30 minutes, the competitor will deliver their speech for up to 7 minutes. Extemporaneous topics cover a variety of international and domestic issues. All extemporaneous speakers quickly learn about a variety of international issues and will become more confident speaking about the changing world around them.</p>
+				</div>
+				<div class="col-sm-6">
+					<h3><b>Original Oratory (OO)</b></h3>
+					<p>Orators are expected to research and speak intelligently, with a degree of originality, in an interesting manner, and with some profit to the audience, about a topic of significance. Although many orations deal with a current problem and propose a solution this is not the only acceptable form of oratory. Your oration may simply alert the audience to a threatening danger, strengthen its devotion to an accepted cause, or eulogize a person. An orator is given free choice of subject and judged solely on the effectiveness of development and presentation.</p>
+				</div>
 			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-6">
-				<h3><b>Extemporaneous Speaking (Extemp)</b></h3>
-				<p>Extemporaneous Speaking is an event that combines quick-thinking and memorization. Competitors will draw a current events question, and then have 30 minutes to prepare a speech in response. Contestants can use a variety of books, magazines, and articles to craft their speech. After 30 minutes, the competitor will deliver their speech for up to 7 minutes. Extemporaneous topics cover a variety of international and domestic issues. All extemporaneous speakers quickly learn about a variety of international issues and will become more confident speaking about the changing world around them.</p>
-			</div>
-			<div class="col-sm-6">
-				<h3><b>Original Oratory (OO)</b></h3>
-				<p>Orators are expected to research and speak intelligently, with a degree of originality, in an interesting manner, and with some profit to the audience, about a topic of significance. Although many orations deal with a current problem and propose a solution this is not the only acceptable form of oratory. Your oration may simply alert the audience to a threatening danger, strengthen its devotion to an accepted cause, or eulogize a person. An orator is given free choice of subject and judged solely on the effectiveness of development and presentation.</p>
-			</div>
-		</div>
-		<div class="row">			
-			<div class="col-sm-6">
-				<h3><b>Interpretation (Interp)</b></h3>
-				<p>
-					Based on their style (below), interpretation competitors take a piece of literature and cut it to ten minutes. They are then are to perform the piece, making it their own.
-					<ul>
-						<li>Dramatic Interp (DI): ​This is an individual category in which the selections are dramatic in nature. Selections shall be cuttings from published-printed novels, short stories, plays, poetry, or any other printed-published materials. Presentations must be memorized, without props or costumes. The time limit is 10 minutes which includes an introduction.</li>
-						<li>Humorous Interp (HI):​​​ This is an individual category in which the selections are humorous in nature. All other rules are the same as Dramatic Interpretation.</li>
-						<li>Duo Interp (Duo):​ This is a two-person category in which the selection may be either humorous or dramatic in nature. All other rules are the same as Dramatic Interpretation.</li>
-					</ul>
-				</p>
-			</div>
-			<div class="col-sm-6">
-				<h3><b>Congress</b></h3>
-				<p>
-					Congress is an event where you compete in a room with around twenty other people at the same time. You are all given about ten topics in advance and must prep three minute speeches in favor or against each topic. After giving your speech people in the room are permitted to question you in a minute long cross fire, and you can do the same to other people. You will be scored based on the quality of your speeches and your interactions during crossfire.
-				</p>
+			<div class="row">
+				<div class="col-sm-6">
+					<h3><b>Interpretation (Interp)</b></h3>
+					<p>
+						Based on their style (below), interpretation competitors take a piece of literature and cut it to ten minutes. They are then are to perform the piece, making it their own.
+						<ul>
+							<li>Dramatic Interp (DI): ​This is an individual category in which the selections are dramatic in nature. Selections shall be cuttings from published-printed novels, short stories, plays, poetry, or any other printed-published materials. Presentations must be memorized, without props or costumes. The time limit is 10 minutes which includes an introduction.</li>
+							<li>Humorous Interp (HI):​​​ This is an individual category in which the selections are humorous in nature. All other rules are the same as Dramatic Interpretation.</li>
+							<li>Duo Interp (Duo):​ This is a two-person category in which the selection may be either humorous or dramatic in nature. All other rules are the same as Dramatic Interpretation.</li>
+						</ul>
+					</p>
+				</div>
+				<div class="col-sm-6">
+					<h3><b>Congress</b></h3>
+					<p>
+						Congress is an event where you compete in a room with around twenty other people at the same time. You are all given about ten topics in advance and must prep three minute speeches in favor or against each topic. After giving your speech people in the room are permitted to question you in a minute long cross fire, and you can do the same to other people. You will be scored based on the quality of your speeches and your interactions during crossfire.
+					</p>
+				</div>
 			</div>
 		</div>
 	</div>
