Add isOnline flag and dynamically change website if camp is online

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 			</div>
 			<div class="col-sm-4">
 				<h3><b>What do I do for lunch?</b></h3>
-				<p>You can either pack a lunch or eat at one of the many restaurants on and around the Pitt Campus. We just ask that you stay in a group of 3 - 4 and stay around the Pitt Campus.</p>
+				<p id="lunch">You can either pack a lunch or eat at one of the many restaurants on and around the Pitt Campus. We just ask that you stay in a group of 3 - 4 and stay around the Pitt Campus.</p>
 			</div>
 			<div class="col-sm-4">
 				<h3><b>Can I attend even if I have to miss a few days?</b></h3>
@@ -130,18 +130,18 @@
 				<p>This program is open to everyone in middle and high school. Anyone who wants to become a better public speaker is welcome!</p>
 			</div>
 			<div class="col-sm-4">
-				<h3><b>Is there going to be a residential program?</b></h3>
-				<p>We do not have any plans to sponsor any overnight programs through Pitt.</p>
-			</div>
-			<div class="col-sm-4">
 				<h3><b>What should I bring?</b></h3>
 				<p>We recommend that you bring writing utensils, a notebook, a timer (like a cellphone), and a laptop (if you have one).</p>
 			</div>
-		</div>
-		<div class="row">
 			<div class="col-sm-4">
 				<h3><b>Who are the instructors?</b></h3>
 				<p>The curriculum will be organized and directed by current speech and debators. Alumni and college graduates will also be helping.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-4" id="residential-item">
+				<h3><b>Is there going to be a residential program?</b></h3>
+				<p>We do not have any plans to sponsor any overnight programs through Pitt.</p>
 			</div>
 			<div class="col-sm-4">
 			</div>
