Add organizers'/instructors' bios and images 2020

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 	<!-- footer -->
 	<footer class="container-fluid bg-footer bg-footer-text">
 
-		<p>©2018 Akshath Jain. All rights reserved. Designed and developed by Akshath Jain.</p>
+		<p>©2018 Akshath Jain. All rights reserved. Designed and developed by Akshath Jain, and updated by Jefferson Mei.</p>
 	</footer>
 </body>
 </html>
