Remove lunch info for online PFI, and add scholarship info

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
 				<p id="familyDiscount"></p>
 			</div>
 			<div class="col-sm-4">
-				<h3><b>What do I do for lunch?</b></h3>
-				<p id="lunch">You can either pack a lunch or eat at one of the many restaurants on and around the Pitt Campus. We just ask that you stay in a group of 3 - 4 and stay around the Pitt Campus.</p>
+				<h3><b>Are scholarships available?</b></h3>
+				<p id="scholarship"></p>
 			</div>
 			<div class="col-sm-4">
 				<h3><b>Can I attend even if I have to miss a few days?</b></h3>
@@ -139,13 +139,16 @@
 			</div>
 		</div>
 		<div class="row">
+			<div class="col-sm-4" id="lunch-item">
+				<h3><b>What do I do for lunch?</b></h3>
+				<p>You can either pack a lunch or eat at one of the many restaurants on and around the Pitt Campus. We just ask that you stay in a group of 3 - 4 and stay around the Pitt Campus.</p>
+			</div>
 			<div class="col-sm-4" id="residential-item">
 				<h3><b>Is there going to be a residential program?</b></h3>
 				<p>We do not have any plans to sponsor any overnight programs through Pitt.</p>
 			</div>
 			<div class="col-sm-4">
-			</div>
-			<div class="col-sm-4">
+
 			</div>
 		</div>
 	</div>
