Hide congress info based on JSON field

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 						</ul>
 					</p>
 				</div>
-				<div class="col-sm-6">
+				<div class="col-sm-6" id="congress-item">
 					<h3><b>Congress</b></h3>
 					<p>
 						Congress is an event where you compete in a room with around twenty other people at the same time. You are all given about ten topics in advance and must prep three minute speeches in favor or against each topic. After giving your speech people in the room are permitted to question you in a minute long cross fire, and you can do the same to other people. You will be scored based on the quality of your speeches and your interactions during crossfire.
