Apply width-constraint to inner divs for consistency

--- a/index.html
+++ b/index.html
@@ -66,21 +66,23 @@
 	</div>
 
 	<!-- general information -->
-	<div class="container-fluid bg-info bg-info-text width-constraint" id="info">
-		<h1 class="text-center">GENERAL INFO</h1>
-		<div class="row">
-			<div class="col-sm-4">
-				<h3><span class="glyphicon glyphicon-paperclip" style="color: #F0AD4E"></span>&nbsp;&nbsp;&nbsp;<b>What?</b></h3>
-				<p>The Pittsburgh Forensics Institute is a low-cost, high-quality summer camp for the Greater Pittsburgh Forensics Community. In a span of two weeks, participants will be able to explore a deep and thorough curriculum for their events modeled after some of the premier camps in the country, with guidance from the most successful members of the North Allegheny Forensics Team.</p>
-			</div>
-			<div class="col-sm-4">
-				<h3><span class="glyphicon glyphicon-calendar" style="color: #F0AD4E"></span>&nbsp;&nbsp;&nbsp;<b>When?</b></h3>
-				<p id="when-description"></p>
-			</div>
-			<div class="col-sm-4">
-				<h3><span class="glyphicon glyphicon-map-marker" style="color: #F0AD4E"></span>&nbsp;&nbsp;&nbsp;<b>Where?</b></h3>
-				<p id="where-description"></p>
-				<a id="where-address" href="#map"></a>
+	<div class="container-fluid bg-info bg-info-text" id="info">
+		<div class="width-constraint">
+			<h1 class="text-center">GENERAL INFO</h1>
+			<div class="row">
+				<div class="col-sm-4">
+					<h3><span class="glyphicon glyphicon-paperclip" style="color: #F0AD4E"></span>&nbsp;&nbsp;&nbsp;<b>What?</b></h3>
+					<p>The Pittsburgh Forensics Institute is a low-cost, high-quality summer camp for the Greater Pittsburgh Forensics Community. In a span of two weeks, participants will be able to explore a deep and thorough curriculum for their events modeled after some of the premier camps in the country, with guidance from the most successful members of the North Allegheny Forensics Team.</p>
+				</div>
+				<div class="col-sm-4">
+					<h3><span class="glyphicon glyphicon-calendar" style="color: #F0AD4E"></span>&nbsp;&nbsp;&nbsp;<b>When?</b></h3>
+					<p id="when-description"></p>
+				</div>
+				<div class="col-sm-4">
+					<h3><span class="glyphicon glyphicon-map-marker" style="color: #F0AD4E"></span>&nbsp;&nbsp;&nbsp;<b>Where?</b></h3>
+					<p id="where-description"></p>
+					<a id="where-address" href="#map"></a>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -93,62 +95,64 @@
 	</div>
 
 	<!-- FAQ -->
-	<div class="container-fluid bg-faq bg-faq-text width-constraint" id="faq">
-		<h1 class="text-center">FAQ</h1>
+	<div class="container-fluid bg-faq bg-faq-text" id="faq">
+		<div class="width-constraint">
+			<h1 class="text-center">FAQ</h1>
 
-		<div class="row">
-			<div class="col-sm-4">
-				<h3><b>How much does this program cost?</b></h3>
-				<p id="program-cost"></p>
+			<div class="row">
+				<div class="col-sm-4">
+					<h3><b>How much does this program cost?</b></h3>
+					<p id="program-cost"></p>
+				</div>
+				<div class="col-sm-4">
+					<h3><b>How do I pay?</b></h3>
+					<p>Payment information will be emailed to you shortly after signing up.</p>
+				</div>
+				<div class="col-sm-4">
+					<h3><b>When is my payment due by?</b></h3>
+					<p id="checkDueDate"></p>
+				</div>
 			</div>
-			<div class="col-sm-4">
-				<h3><b>How do I pay?</b></h3>
-				<p>Payment information will be emailed to you shortly after signing up.</p>
+			<div class="row">
+				<div class="col-sm-4">
+					<h3><b>Is there a family discount?</b></h3>
+					<p id="familyDiscount"></p>
+				</div>
+				<div class="col-sm-4">
+					<h3><b>Are scholarships available?</b></h3>
+					<p id="scholarship"></p>
+				</div>
+				<div class="col-sm-4">
+					<h3><b>Can I attend even if I have to miss a few days?</b></h3>
+					<p>Not a problem! Just let us know when you're going to be absent.</p>
+				</div>
 			</div>
-			<div class="col-sm-4">
-				<h3><b>When is my payment due by?</b></h3>
-				<p id="checkDueDate"></p>
+			<div class="row">
+				<div class="col-sm-4">
+					<h3><b>Who can attend?</b></h3>
+					<p>This program is open to everyone in middle and high school. Anyone who wants to become a better public speaker is welcome!</p>
+				</div>
+				<div class="col-sm-4">
+					<h3><b>What should I bring?</b></h3>
+					<p>We recommend that you bring writing utensils, a notebook, a timer (like a cellphone), and a laptop (if you have one).</p>
+				</div>
+				<div class="col-sm-4">
+					<h3><b>Who are the instructors?</b></h3>
+					<p>The curriculum will be organized and directed by current speech and debators. Alumni and college graduates will also be helping.</p>
+				</div>
 			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-4">
-				<h3><b>Is there a family discount?</b></h3>
-				<p id="familyDiscount"></p>
-			</div>
-			<div class="col-sm-4">
-				<h3><b>Are scholarships available?</b></h3>
-				<p id="scholarship"></p>
-			</div>
-			<div class="col-sm-4">
-				<h3><b>Can I attend even if I have to miss a few days?</b></h3>
-				<p>Not a problem! Just let us know when you're going to be absent.</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-4">
-				<h3><b>Who can attend?</b></h3>
-				<p>This program is open to everyone in middle and high school. Anyone who wants to become a better public speaker is welcome!</p>
-			</div>
-			<div class="col-sm-4">
-				<h3><b>What should I bring?</b></h3>
-				<p>We recommend that you bring writing utensils, a notebook, a timer (like a cellphone), and a laptop (if you have one).</p>
-			</div>
-			<div class="col-sm-4">
-				<h3><b>Who are the instructors?</b></h3>
-				<p>The curriculum will be organized and directed by current speech and debators. Alumni and college graduates will also be helping.</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-4" id="lunch-item">
-				<h3><b>What do I do for lunch?</b></h3>
-				<p>You can either pack a lunch or eat at one of the many restaurants on and around the Pitt Campus. We just ask that you stay in a group of 3 - 4 and stay around the Pitt Campus.</p>
-			</div>
-			<div class="col-sm-4" id="residential-item">
-				<h3><b>Is there going to be a residential program?</b></h3>
-				<p>We do not have any plans to sponsor any overnight programs through Pitt.</p>
-			</div>
-			<div class="col-sm-4">
+			<div class="row">
+				<div class="col-sm-4" id="lunch-item">
+					<h3><b>What do I do for lunch?</b></h3>
+					<p>You can either pack a lunch or eat at one of the many restaurants on and around the Pitt Campus. We just ask that you stay in a group of 3 - 4 and stay around the Pitt Campus.</p>
+				</div>
+				<div class="col-sm-4" id="residential-item">
+					<h3><b>Is there going to be a residential program?</b></h3>
+					<p>We do not have any plans to sponsor any overnight programs through Pitt.</p>
+				</div>
+				<div class="col-sm-4">
 
+				</div>
 			</div>
 		</div>
 	</div>
