--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 				</div>
 				<div class="col-sm-4">
 					<h3><b>How do I pay?</b></h3>
-					<p>Payment information will be emailed to you shortly after signing up.</p>
+					<p>All of the payment details are in the signup form.</p>
 				</div>
 				<div class="col-sm-4">
 					<h3><b>When is my payment due by?</b></h3>
